<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ProductDetails"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/productDetailsGuidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/productDetailsGuidelineEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/productDetailsGuidelineStart"
        app:layout_constraintTop_toTopOf="@+id/productDetailsGuidelineTop"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/rounded_white_background"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp">
            <!--    TextView to show Product ID-->

            <ImageButton
                android:id="@+id/productDetailsEditButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@drawable/statelistdrawable_yellow"
                android:clickable="true"
                android:contentDescription="editbutton"
                android:elevation="10dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_edit_white_24px"
                app:layout_constraintEnd_toStartOf="@id/productDetailsDeleteButton"
                app:layout_constraintStart_toEndOf="@id/addItemScrollableViewEditButton"
                app:layout_constraintTop_toBottomOf="@id/changeItemScrollableViewTop" />

            <ImageButton
                android:id="@+id/productDetailsDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@drawable/statelistdrawable_red"
                android:clickable="true"
                android:contentDescription="deletebutton"
                android:elevation="10dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_delete_white_24px"
                app:layout_constraintEnd_toStartOf="@id/changeItemScrollableViewEnd"
                app:layout_constraintStart_toEndOf="@id/productDetailsEditButton"
                app:layout_constraintTop_toBottomOf="@id/changeItemScrollableViewTop" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/productDetailsSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_orange"
                android:text="save"
                android:textColor="#ffffff"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/idTvProductId"
                app:layout_constraintEnd_toStartOf="@+id/addItemScrollableViewEditButton"
                app:layout_constraintTop_toTopOf="@+id/changeItemScrollableViewTop" />

            <TextView
                android:id="@+id/idTvProductIdTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="Product ID"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/productDetailsGuidelineStart2"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/idTvProductId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners_white"
                android:padding="10dp"
                android:textColor="#423E3E"
                android:textSize="18sp"
                android:inputType="none"
                android:focusedByDefault="false"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="@id/productDetailsGuidelineEnd2"
                app:layout_constraintStart_toStartOf="@id/idTvProductIdTitle"
                app:layout_constraintTop_toBottomOf="@id/idTvProductIdTitle" />

            <TextView
                android:id="@+id/idTvproductDescriptionTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Product Description"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/idTvProductId"
                app:layout_constraintTop_toBottomOf="@id/idTvProductId" />

            <EditText
                android:id="@+id/idTvProductDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners_white"
                android:lines="2"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="#423E3E"
                android:textSize="18sp"
                android:inputType="none"
                android:focusedByDefault="false"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="@id/idTvProductId"
                app:layout_constraintStart_toStartOf="@id/idTvproductDescriptionTitle"
                app:layout_constraintTop_toBottomOf="@id/idTvproductDescriptionTitle" />

            <TextView
                android:id="@+id/idTVCardItemAvailableUnitsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Available Units"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/idTvProductDescription"
                app:layout_constraintTop_toBottomOf="@id/idTvProductDescription" />

            <TextView
                android:id="@+id/idTVCardItemAvailableUnits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners_white"
                android:padding="10dp"
                android:textColor="#423E3E"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/idTvProductDescription"
                app:layout_constraintStart_toStartOf="@id/idTVCardItemAvailableUnitsTitle"
                app:layout_constraintTop_toBottomOf="@id/idTVCardItemAvailableUnitsTitle" />

            <ImageView
                android:id="@+id/productDetailsImageViewProductImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_corners_white"
                android:scaleType="fitXY"
                android:src="@drawable/ic_photo_mainblue_128px"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/idTVCardItemAvailableUnits"
                app:layout_constraintStart_toStartOf="@id/idTVCardItemAvailableUnits"
                app:layout_constraintTop_toBottomOf="@id/idTVCardItemAvailableUnits" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="   "
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/productDetailsImageViewProductImage"
                app:layout_constraintStart_toStartOf="@id/productDetailsImageViewProductImage"
                app:layout_constraintEnd_toEndOf="@id/productDetailsImageViewProductImage" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/changeItemScrollableViewTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".006" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/changeItemScrollableViewEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".98" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/addItemScrollableViewEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".68" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/productDetailsGuidelineStart2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/productDetailsGuidelineEnd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".95" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/productDetailsGuidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/productDetailsGuidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/productDetailsGuidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/productDetailsGuidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".03" />


</androidx.constraintlayout.widget.ConstraintLayout>