<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:foregroundTint="@color/black"
    tools:context=".views.ItemList">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/itemListGuidelineTop"
        app:layout_constraintEnd_toEndOf="@id/itemListGuidelineEnd"
        app:layout_constraintStart_toEndOf="@id/itemListGuidelineStart"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/idSVSearchItems"
            android:background="@drawable/rounded_white_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:queryHint="Search..."
            app:queryHint="Search..."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/itemListGuidelineMiddleLeft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnItemListActivityAddProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_orange"
            android:padding="5dp"
            android:text="Add Product"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/itemListGuidelineMiddleRight"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/itemListGuidelineMiddleLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/itemListGuidelineMiddleRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    Recycler view for displaying data from Firebase-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/itemListGuidelineBottom"
        app:layout_constraintEnd_toStartOf="@id/itemListGuidelineEnd"
        app:layout_constraintStart_toEndOf="@id/itemListGuidelineStart"
        app:layout_constraintTop_toBottomOf="@id/itemListGuidelineTop" />

    <!--    Progress bar for showing loading screen-->
    <ProgressBar
        android:id="@+id/idItemProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="@id/itemListGuidelineBottom"
        app:layout_constraintLeft_toLeftOf="@id/itemListGuidelineStart"
        app:layout_constraintRight_toRightOf="@id/itemListGuidelineEnd"
        app:layout_constraintTop_toTopOf="@id/itemListGuidelineTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/itemListGuidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/itemListGuidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/itemListGuidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/itemListGuidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".98" />

</androidx.constraintlayout.widget.ConstraintLayout>